--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <a class="logo" href="#home">
-            <img src="img\Logo.png">
+            <img src="https://raw.githubusercontent.com/thiago-galvao/thiago-galvao.github.io/refs/heads/main/img/logo-removebg-preview.png">
         </a>
         <nav class="navbar">
             <a href="#home">Inicio</a>
