--- a/index.html
+++ b/index.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab Galvão - Portifólio</title>
+    <title>LabGalvão - Portifólio</title>
     <link rel="stylesheet" href="css\style.css">
+    <link rel="icon" href="img\logo.png">
 </head>
 <body>
     <header class="header">
-        <a class="logo" href="#home">
-            <img src="https://raw.githubusercontent.com/thiago-galvao/thiago-galvao.github.io/refs/heads/main/img/logo.png">
-        </a>
-        <nav class="navbar">
-            <a href="#home">Inicio</a>
-            <a href="#servicos">Serviços</a>
-            <a href="#portifolio">Portifólio</a>
-            <a href="#contato">Contato</a>
-        </nav>
+        <div class="logo">
+            <a href="#home">
+                LabGalvão
+            </a>
+        </div>
+        <div class="navbar">
+            <nav>
+                <a href="#home">Inicio</a>
+                <a href="#servicos">Serviços</a>
+                <a href="#portifolio">Portifólio</a>
+                <a href="#contato">Contato</a>
+            </nav>
+        </div>
     </header>
-    <div class="Container">
-        <h1>MEU GRID</h1>
-    </div>
+    <main class="main">
+        <div class="texto">
+            <h1>OLÁ, EU SOU THIAGO!</h1>
+        </div>
+        <div class="imagem">
+            <img src="img\foto_thiago.jpg">
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
