--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
         </div>
     </header>
     <main class="main">
+        <div class="titulo">
+            <h1>Thiago Galvão</h1>
+        </div>
         <div class="texto">
-            <h1>OLÁ, EU SOU THIAGO!</h1>
+            <p>Olá! Eu sou o Thiago, um entusiasta de tecnologia e desenvolvedor em formação pelo Instituto Federal do Paraná.
+                Este é o meu portfólio: um espaço onde transformo linhas de código em soluções reais. 
+                Aqui, você poderá explorar os projetos que venho construindo e acompanhar minha evolução.<br>
+                Seja muito bem-vindo(a) e fique à vontade para navegar!</p>
         </div>
         <div class="imagem">
             <img src="img\foto_thiago.jpg">
