Atividade de Web I

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main class="main">
         <div class="titulo">
-            <h1>Thiago Galvão</h1>
+            Thiago Galvão
         </div>
         <div class="texto">
             <p>Olá! Eu sou o Thiago, um entusiasta de tecnologia e desenvolvedor em formação pelo Instituto Federal do Paraná.
