--- a/index.html
+++ b/index.html
@@ -2,43 +2,61 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LabGalvão - Portifólio</title>
-    <link rel="stylesheet" href="css\style.css">
-    <link rel="icon" href="img\logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>(TESTE)LabGalvão - Portifólio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="C:\Users\Thiago\Documents\thiagogalvao.github.io\css\style.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            <a href="#home">
-                LabGalvão
+        <div class="navbar-brand d-none d-lg-block mb-3 w-100 text-center">
+            <a href="#">
+                <img src="C:\Users\Thiago\Documents\thiagogalvao.github.io\img\logo.png" alt="Logo do Laboratório Galvão" class="logo">
             </a>
         </div>
-        <div class="navbar">
-            <nav>
-                <a href="#home">Inicio</a>
-                <a href="#servicos">Serviços</a>
-                <a href="#portifolio">Portifólio</a>
-                <a href="#contato">Contato</a>
-            </nav>
-        </div>
     </header>
+    <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
+        <div class="container-fluid justify-content-center">
+            <div class="w-100 text-center d-lg-none py-3">
+                <a class="navbar-brand" href="#">
+                    <img src="C:\Users\Thiago\Documents\thiagogalvao.github.io\img\logo.png" alt="Logo do Laboratório Galvão" height="50">
+                </a>
+                <hr class="text-white"> 
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarToggleExternalContent" data-bs-theme="dark">
+                <div class="navbar-nav text-center">
+                    <a class="nav-link active" aria-current="true" href="#">Início</a>
+                    <a class="nav-link active" aria-current="true" href="#sobremim">Sobre mim</a>
+                    <a class="nav-link active" aria-current="true" href="#contato">Contato</a>
+                </div>
+            </div>
+        </div>
+    </nav>
     <main class="main">
-        <div class="titulo">
-            Thiago Galvão
+        <div style="height: 500px;">
         </div>
-        <div class="texto">
-            <p>Olá! Eu sou o Thiago, um entusiasta de tecnologia e desenvolvedor em formação pelo Instituto Federal do Paraná.
-                Este é o meu portfólio: um espaço onde transformo linhas de código em soluções reais. 
-                Aqui, você poderá explorar os projetos que venho construindo e acompanhar minha evolução.<br>
-                Seja muito bem-vindo(a) e fique à vontade para navegar!</p>
+        <div id="sobremim">
+            <div class="titulo">
+                Thiago Galvão
+            </div>
+            <div class="texto">
+                <p>Olá! Eu sou o Thiago, um entusiasta de tecnologia e desenvolvedor em formação pelo Instituto Federal do Paraná.
+                    Este é o meu portfólio: um espaço onde transformo linhas de código em soluções reais. 
+                    Aqui, você poderá explorar os projetos que venho construindo e acompanhar minha evolução.<br>
+                    Seja muito bem-vindo(a) e fique à vontade para navegar!</p>
+            </div>
+            <div class="imagem">
+                <img src="img\foto_thiago.jpg">
+            </div>
         </div>
-        <div class="imagem">
-            <img src="img\foto_thiago.jpg">
-        </div>
+        <div id="contato" style="height: 1000px; background-color: black;"></div>
     </main>
     <footer>
-
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js">
+    </script>
 </body>
 </html>
