--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>(TESTE)LabGalvão - Portifólio</title>
+    <title>LabGalvão - Portifólio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="C:\Users\Thiago\Documents\thiagogalvao.github.io\css\style.css">
+    <link rel="stylesheet" href=".\css\style.css">
 </head>
 <body>
     <header class="header">
         <div class="navbar-brand d-none d-lg-block mb-3 w-100 text-center">
             <a href="#">
-                <img src="C:\Users\Thiago\Documents\thiagogalvao.github.io\img\logo.png" alt="Logo do Laboratório Galvão" class="logo">
+                <img src=".\img\logo.png" alt="Logo do Laboratório Galvão" class="logo">
             </a>
         </div>
     </header>
@@ -19,7 +19,7 @@
         <div class="container-fluid justify-content-center">
             <div class="w-100 text-center d-lg-none py-3">
                 <a class="navbar-brand" href="#">
-                    <img src="C:\Users\Thiago\Documents\thiagogalvao.github.io\img\logo.png" alt="Logo do Laboratório Galvão" height="50">
+                    <img src=".\img\logo.png" alt="Logo do Laboratório Galvão" height="50">
                 </a>
                 <hr class="text-white"> 
             </div>
@@ -49,7 +49,7 @@
                     Seja muito bem-vindo(a) e fique à vontade para navegar!</p>
             </div>
             <div class="imagem">
-                <img src="img\foto_thiago.jpg">
+                <img src=".\img\foto_thiago.jpg">
             </div>
         </div>
         <div id="contato" style="height: 1000px; background-color: black;"></div>
