--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LabGalvão - Portifólio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".\css\style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="navbar-brand d-none d-lg-block mb-3 w-100 text-center">
+        <div class="container-fluid text-center">
             <a href="#">
                 <img src=".\img\logo.png" alt="Logo do Laboratório Galvão" class="logo">
             </a>
@@ -18,18 +18,13 @@
             </h3>
         </div>
     </header>
+    <hr class="text-white"> 
     <nav class="navbar navbar-expand-lg sticky-top" data-bs-theme="dark">
         <div class="container-fluid justify-content-center">
-            <div class="w-100 text-center d-lg-none py-3">
-                <a class="navbar-brand" href="#">
-                    <img src=".\img\logo.png" alt="Logo do Laboratório Galvão" height="50">
-                </a>
-                <hr class="text-white"> 
-            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarToggleExternalContent" data-bs-theme="dark">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarToggleExternalContent">
                 <div class="navbar-nav text-center">
                     <a class="nav-link active" aria-current="true" href="#">Início</a>
                     <a class="nav-link active" aria-current="true" href="#sobremim">Sobre mim</a>
@@ -46,10 +41,10 @@
                         <h1 class="display-4 fw-bold text-light">Thiago Galvão</h1>
                     </div>
                     <div class="col-12 d-flex justify-content-center mb-5">
-                        <img src=".\img\foto_thiago.jpg" class="img-fluid rounded-circle shadow-lg" alt="Foto de Perfil do Thiago" style="max-width: 250px; height: 250px; object-fit: cover;">
+                        <img src=".\img\foto_thiago.jpg" class="img-fluid rounded-circle shadow-lg" alt="Foto de Perfil do Thiago">
                     </div>
                     <div class="col-12 text-center">
-                        <p class="lead text-light mx-auto" style="max-width: 800px;">
+                        <p class="lead text-light mx-auto">
                             Olá! Sou Thiago, um entusiasta de tecnologia e desenvolvedor em formação pelo Instituto Federal do Paraná.
                             Este é o meu portfólio: um espaço onde transformo linhas de código em soluções reais.
                             Aqui, você poderá explorar os projetos que venho construindo e acompanhar minha evolução.
@@ -60,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section id="contato" class="py-5" style="background-color: rgb(3, 1, 37);">
+        <section id="contato" class="py-5">
             <div class="container text-white">
                 <div class="row mb-5">
                     <div class="col-12 text-center">
