--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+</svg>
 </head>
 <body>
     <header class="header">
@@ -31,7 +32,7 @@
                     <a class="nav-link active" aria-current="true" href="#">Início</a>
                     <a class="nav-link active" aria-current="true" href="#sobremim">Sobre mim</a>
                     <a class="nav-link active" aria-current="true" href="#habilidades">Habilidades</a>
-                    <a class="nav-link active" aria-current="true" href="#projetos">Meus Projetos</a>
+                    <a class="nav-link active" aria-current="true" href="#projetos">Portifólio</a>
                     <a class="nav-link active" aria-current="true" href="#contato">Contato</a>
                 </div>
             </div>
@@ -108,6 +109,7 @@
                                 <li class="mb-2"><i class="fas fa-sitemap skill-icon-small me-2"></i> Estrutura de Dados</li>
                                 <li class="mb-2"><i class="fas fa-cube skill-icon-small me-2"></i> CRUD (Criação, Leitura, Atualização, Exclusão)</li>
                                 <li class="mb-2"><i class="fas fa-shield-alt skill-icon-small me-2"></i> Boas Práticas de Código</li>
+                                <li class="mb-2"><i class="fa-regular fa-file-code skill-icon-small me-2"></i> Design Pattern em Java</li>
                             </ul>
                         </div>
                     </div>
@@ -120,7 +122,6 @@
                 <div class="row mb-5">
                     <div class="col-12 text-center">
                         <h2 class="display-4 fw-bold">Meus Projetos</h2>
-                        <p class="lead">Alguns trabalhos realizados.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center">
@@ -204,7 +205,7 @@
                         <ul class="list-unstyled">
                             <li><a href="#" class="text-white-50 text-decoration-none">Início</a></li>
                             <li><a href="#sobremim" class="text-white-50 text-decoration-none">Sobre mim</a></li>
-                            <li><a href="#projetos" class="text-white-50 text-decoration-none">Meus Projetos</a></li>
+                            <li><a href="#projetos" class="text-white-50 text-decoration-none">Portifólio</a></li>
                             <li><a href="#contato" class="text-white-50 text-decoration-none">Contato</a></li>
                         </ul>
                     </div>
