--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                                 <li class="mb-2"><i class="fab fa-css3-alt skill-icon-small me-2 css-color"></i> CSS3</li>
                                 <li class="mb-2"><i class="fab fa-js-square skill-icon-small me-2 js-color"></i> JavaScript</li>
                                 <li class="mb-2"><i class="fab fa-java skill-icon-small me-2 java-color"></i> Java</li>
+                                <li class="mb-2"><i class="fab fa-python skill-icon-small me-2 java-color"></i> Python</li>
                                 <li class="mb-2"><i class="fas fa-database skill-icon-small me-2 sql-color"></i> MySQL</li>
                             </ul>
                         </div>
