Aajuste no formulário de contato.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-8 mb-5">
-                        <form id="contactForm"  method="POST" action="https://formspree.io/f/mqardlao" class="mb-5">
+                        <form id="contactForm"  method="POST" action="https://api.web3forms.com/submit" class="mb-5">
+                            <input type="hidden" name="access_key" value="fd5b03db-60ea-45d7-a99d-0f2247d0d436">
                             <div class="mb-3">
                                 <label for="nome" class="form-label">Seu Nome</label>
                                 <input type="text" class="form-control" id="nome" name="Nome" required>
